Mejorados textos de ejercicios 1 y 2

--- a/ejercicios/ejercicio1/template.html
+++ b/ejercicios/ejercicio1/template.html
@@ -4,8 +4,8 @@
 <hr>
 
 <h2>Resultado</h2>
-<ejercicio-holamundo1></ejercicio-holamundo1>
-<div ejercicio-holamundo1></div>
+<p>Aquí debería aparecer nada el mensaje:<ejercicio-holamundo1></ejercicio-holamundo1>
+<p>Aquí no debería aparecer nada:<div ejercicio-holamundo1></div>
 <hr>
 
 <h3>Código ejecutado</h3>
