--- a/ejercicios/ejercicio2/template.html
+++ b/ejercicios/ejercicio2/template.html
@@ -1,11 +1,11 @@
 <h1>Ejercicio 2</h1>
 <p>Crea una directiva <code>ejercicio-holamundo2</code>,
-  igual a la anterior pero que solo funcione como elemento.
+  igual a la anterior pero que solo funcione como atributo.
 <hr>
 
 <h2>Resultado</h2>
-<ejercicio-holamundo2></ejercicio-holamundo2>
-<div ejercicio-holamundo2></div>
+<p>Aquí no debería aparecer nada: <ejercicio-holamundo2></ejercicio-holamundo2>
+<p>Aquí debería aparecer nada el mensaje:<div ejercicio-holamundo2></div>
 <hr>
 
 <h3>Código ejecutado</h3>
