<pre> corregido en ejercicio 10

--- a/ejercicios/ejercicio10/template.html
+++ b/ejercicios/ejercicio10/template.html
@@ -16,7 +16,7 @@
 <h3>Código ejecutado</h3>
 <pre>
   &lt;ejercicio-heroes0 titulo='4 Fantásticos'&gt;&lt;/ejercicio-heroes0&gt;
-  &lt;ejercicio-heroes0 titulo='{{3+1}} Fantásticos'&gt;&lt;/ejercicio-heroes0&gt;
+  &lt;ejercicio-heroes0 titulo='{{"{{"}}3+1}} Fantásticos'&gt;&lt;/ejercicio-heroes0&gt;
 </pre>
 <hr>
 
