Corregido plantilla de ejercicio 18

--- a/ejercicios/ejercicio18/template.html
+++ b/ejercicios/ejercicio18/template.html
@@ -7,7 +7,7 @@
 <h2>Resultado</h2>
 <form name="myForm">
   <seleccion-superheroes ng-model="vm.superheroe"></seleccion-superheroes>
-  <p>Superhéroe seleccionado: {{vm.superheroe}}</p>
+  <p>Superhéroe seleccionado: {{vm.superheroe.nombre}}</p>
 </form>
 <hr>
 
@@ -15,7 +15,7 @@
 <pre>
   &lt;form name="myForm"&gt;
     &lt;seleccion-superheroes ng-model="vm.superheroe"&gt;&lt;/seleccion-superheroes&gt;
-    &lt;p&gt;Superhéroe seleccionado: {{vm.superheroe}}&lt;/p&gt;
+    &lt;p&gt;Superhéroe seleccionado: {{vm.superheroe.nombre}}&lt;/p&gt;
   &lt;/form&gt;
 </pre>
 <hr>
