Corregido <pre> de ejercicio 22

--- a/ejercicios/ejercicio22/template.html
+++ b/ejercicios/ejercicio22/template.html
@@ -18,7 +18,7 @@
 <h3>Código ejecutado</h3>
 <pre>
   &lt;ejercicio-tarjeta3 titulo="vm.titulo"&gt;
-    &lt;p&gt;Contenido transcluido hoy día: {{hoy | date:'dd/MM/yyyy'}}&lt;/p&gt;
+    &lt;p&gt;Contenido transcluido hoy día: {{'{{'}}hoy | date:'dd/MM/yyyy'}}&lt;/p&gt;
     &lt;ol&gt;
       &lt;li&gt;Uno&lt;/li&gt;
       &lt;li&gt;Dos&lt;/li&gt;
